Add in post endpoint

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 
-<a href="https://accounts.google.com/o/oauth2/auth?access_type=offline&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar.readonly&response_type=code&client_id=298903977210-ht5khfqm2puteou7ggpbqb7hnp35rkb7.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob">
+<a href="https://accounts.google.com/o/oauth2/auth?access_type=offline&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&response_type=code&client_id=298903977210-l27e691t8te7uha8p0u44uk17k66rfba.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8887">
     Connect Google Account </a>
 
 </body>
